--- a/src/Components/input/input.css
+++ b/src/Components/input/input.css
@@ -5,6 +5,7 @@
   align-items: center;
   max-width: 366px;
   height: 92px;
+  margin-bottom: 24px;
 }
 .label__form{
   font-weight: 500;
@@ -32,5 +33,11 @@
 }
 .input:disabled{
   color: #D1D1D1;
+}
+.errorMesage{
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 24px;
+  color: #FF768E;
 }
 /* Input end */
