--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -1,4 +1,5 @@
 .sign_up-container{
+
   display: flex;
   background: #F5FBFF;
   width: 100%;
@@ -6,13 +7,14 @@
 .sign_up-form{
   background:#fff;
   display: flex;
-  width: 606px;
+  min-width: 606px;
   height: 1024px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 .sign_up-title{
+  
   font-size: 36px;
   line-height: 49px;
   color: #344472;
@@ -38,4 +40,15 @@
   height: 412px;
   display: flex;
 
+}
+.checkbox_div{
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  margin-right: auto;
+  margin-left: 120px;
+
+}
+.checkbox_div > input{
+  margin-right: 8px;
 }
