--- a/src/Pages/page_enter/SignIn.css
+++ b/src/Pages/page_enter/SignIn.css
@@ -6,7 +6,7 @@
 .sign_in-form{
   background:#fff;
   display: flex;
-  width: 606px;
+  min-width: 606px;
   height: 1024px;
   flex-direction: column;
   align-items: center;
