--- a/src/styles/importStyles.css
+++ b/src/styles/importStyles.css
@@ -14,3 +14,5 @@
 @import '../Pages/page_enter/SignIn.css';
 @import '../Pages/SignUp/SignUp.css';
 @import '../Pages/page_enter_error/SignInError.css';
+@import '../Components/Search/Search.css';
+@import '../Pages/card_teams/card_teams.css';
