--- a/src/Components/TeamSmallCard/teamSmallCard.css
+++ b/src/Components/TeamSmallCard/teamSmallCard.css
@@ -1,10 +1,12 @@
 
 .small__card-container{
-  margin: 32px 24px -8px 0;
+  display: flex;
+  flex-direction: column;
   width: 364px;
-  height: 100%;
+  height: 380px;
 }
 .small__card-top{
+  width: 364px;
   height: 280px;
   display: flex;
   justify-content: center;
@@ -12,6 +14,7 @@
   background: linear-gradient(276.45deg, #707070 0%, #393939 100.28%);
   }
 .small__card-bot{
+  width: 364px;
   display: flex;
   justify-content: center;
   align-items: center;
