add card_players page

--- a/src/Pages/card_players/card_players.css
+++ b/src/Pages/card_players/card_players.css
@@ -1,5 +1,5 @@
 
-.upContainer{
+.upContainer-players{
   flex-wrap: wrap;
   height: 40px;
   width: 1140px;
@@ -9,7 +9,7 @@
   justify-content: space-between;
 }
 
-.mainContainer{
+.mainContainer-players{
   padding-left: 80px;
   justify-content: flex-start;
   display: flex;
