--- a/src/styles/importStyles.css
+++ b/src/styles/importStyles.css
@@ -16,3 +16,4 @@
 @import '../Pages/page_enter_error/SignInError.css';
 @import '../Components/Search/Search.css';
 @import '../Pages/card_teams/card_teams.css';
+@import '../Pages/card_players/card_players.css'
