add new page and some fixes

--- a/src/styles/importStyles.css
+++ b/src/styles/importStyles.css
@@ -18,4 +18,4 @@
 @import '../Pages/card_teams/card_teams.css';
 @import '../Pages/card_players/card_players.css';
 @import '../Pages/teams_Empty/teams_empty.css';
-/* @import '../Pages/players_Empty/players_empty.css'; */
+@import '../Pages/players_Empty/players_empty.css';
