--- a/src/Components/input/input.css
+++ b/src/Components/input/input.css
@@ -25,7 +25,7 @@
   line-height: 24px;
   color: #303030;
 }
-.input:hover{
+/* .input:hover{
   background: #D1D1D1;
 }
 .input:focus{
@@ -33,7 +33,7 @@
 }
 .input:disabled{
   color: #D1D1D1;
-}
+} */
 .errorMesage{
   font-weight: 500;
   font-size: 12px;
